# brs_edit

./: Cargo.toml  README.md
src/: bricks.rs  delete.rs  explorer.rs  export.rs  file_dialog.rs  gui.rs  header2.rs  icon.rs  import.rs  input.rs  main.rs  menu.rs  open.rs  save.rs  shortcuts.rs  view.rs
src/editor/: bricks.rs  header1.rs  header2.rs  metadata.rs  mod.rs  preview.rs
src/explorer/: filetree.rs  mod.rs  preview.rs
src/render/: mod.rs
