[package]
name = "brs-edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brickadia = "0.1"
bytemuck = "1.12.3"
dirs = "4.0.0"
eframe = { version="0.20.0", features=["wgpu"] }
egui = { version="0.20.0", features=["bytemuck", "tracing"]}
egui_extras = "0.20.0"
image = "0.24.5"
itertools = "0.10.5"
num-format = "0.4.4"
rfd = "0.10.0"
