[package]
name = "brs-edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brickadia = { version = "0.1", default_features = false, features = ["util", "zlib-ng"] }
dirs = "5.0"
eframe = "0.26"
egui = "0.26"
egui_extras = "0.26"
image = "0.24.5"
itertools = "0.12"
num-format = "0.4.4"
rfd = "0.14"
